--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -45,11 +45,7 @@ font-size: 1.5rem;
 font-weight: 700;
 margin: 0;
 text-decoration: none;
-color: transparent;
-background: linear-gradient(45deg, var(--primary-green), var(--light-green));
--webkit-background-clip: text;
-background-clip: text;
-transition: background 0.3s ease;
+color: rgb(28, 134, 28)
 }
 
 .sitename:hover {
